--- a/Template_v.0.3/index.html
+++ b/Template_v.0.3/index.html
@@ -15,12 +15,12 @@
             <a href="#"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
         </div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Feedback</a></li>
-            <li><a href="#">Sitemap</a></li>
-            <li><a href="#">User Profile</a></li>
-            <li><a href="#">Team</a></li>
+            <li><a href="Home">Home</a></li>
+            <li><a href="Gallery">Gallery</a></li>
+            <li><a href="Feedback">Feedback</a></li>
+            <li><a href="Sitemap">Sitemap</a></li>
+            <li><a href="Profile">User Profile</a></li>
+            <li><a href="Team">Team</a></li>
         </ul>
     </nav>
     <!-- ...................................................... Content - start ........................................................... -->
