Add page developer
Added page devs anchor tag

--- a/Template_v.0.3/index.html
+++ b/Template_v.0.3/index.html
@@ -34,7 +34,7 @@
 
     <!-- /* page developed by "Footer" */ -->
     <div class="footer-dev" id="footer-dev">
-        Page developed by <a href="#"> Uditha Vithanage </a>
+        Page developed by <a href="page-dev"> Uditha Vithanage </a>
     </div>
 
 
