Added student 2 files
Feedback form, Template, Homepage

--- a/Feedback/index.html
+++ b/Feedback/index.html
@@ -15,9 +15,9 @@
             <a href="#"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
         </div>
         <ul>
-            <li class="home"><a href="#">Home</a></li>
+            <li class="home"><a href="../Home_v.0.2/index.html">Home</a></li>
             <li class="gallery"><a href="#">Gallery</a></li>
-            <li class="feedback"><a href="#">Feedback</a></li>
+            <li class="feedback"><a href="./index.html">Feedback</a></li>
             <li class="sitemap"><a href="#">Sitemap</a></li>
             <li class="user-porfile"><a href="#">User Profile</a></li>
             <li class="team"><a href="#">Team</a></li>
