--- a/Induwara/feedback.html
+++ b/Induwara/feedback.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&family=Vollkorn&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="feedback.css">
     <title> Wild Sphere - feedback </title>
 </head>
 
@@ -98,7 +98,7 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="feedback.js"></script>
 
 </body>
 </html>
