--- a/Induwara/feedback.html
+++ b/Induwara/feedback.html
@@ -12,13 +12,13 @@
 
     <nav class="navbar">
         <div class="logo">
-            <a href="#"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
+            <a href="../Induwara/home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
         </div>
         <ul>
-            <li class="home"><a href="../Home_v.0.2/index.html">Home</a></li>
-            <li class="gallery"><a href="#">Gallery</a></li>
-            <li class="feedback"><a href="./index.html">Feedback</a></li>
-            <li class="sitemap"><a href="#">Sitemap</a></li>
+            <li class="home"><a href="../Induwara/home.html">Home</a></li>
+            <li class="gallery"><a href="../Lithila/gallery.html">Gallery</a></li>
+            <li class="feedback"><a href="../Induwara/feedback.html">Feedback</a></li>
+            <li class="sitemap"><a href="../Lithila/sitemap.html">Sitemap</a></li>
             <li class="user-porfile"><a href="#">User Profile</a></li>
             <li class="team"><a href="#">Team</a></li>
         </ul>
