--- a/Lithila/gallery.html
+++ b/Lithila/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&family=Vollkorn&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="gallery.css">
     <link rel="stylesheet" href="template.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,15 +22,15 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="#"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a>
+            <a href="../Induwara/home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
         </div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Feedback</a></li>
-            <li><a href="#">Sitemap</a></li>
-            <li><a href="#">User Profile</a></li>
-            <li><a href="#">Team</a></li>
+            <li class="#"><a href="../Induwara/home.html">Home</a></li>
+            <li class="active"><a href="../Lithila/gallery.html">Gallery</a></li>
+            <li class="#"><a href="../Induwara/feedback.html">Feedback</a></li>
+            <li class="#"><a href="../Lithila/sitemap.html">Sitemap</a></li>
+            <li class="#"><a href="#">User Profile</a></li>
+            <li class="#"><a href="#">Team</a></li>
         </ul>
     </nav>
 
