--- a/Induwara/home.html
+++ b/Induwara/home.html
@@ -23,21 +23,18 @@
 
     <section class="sec1">
         <nav class="navbar">
-    <div class="logo">
-        <a href="#"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a>
-    </div>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Feedback</a></li>
-        <li><a href="#">Sitemap</a></li>
-        <li><a href="#">User Profile</a></li>
-        <li><a href="#">Team</a></li>
-    </ul>
-    <div class="menu-icon">
-        <i class="fa fa-bars"></i>
-    </div>
-</nav>
+            <div class="logo">
+                <a href="../Induwara/home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
+            </div>
+            <ul>
+                <li class="home"><a href="../Induwara/home.html">Home</a></li>
+                <li class="gallery"><a href="../Lithila/gallery.html">Gallery</a></li>
+                <li class="feedback"><a href="../Induwara/feedback.html">Feedback</a></li>
+                <li class="sitemap"><a href="../Lithila/sitemap.html">Sitemap</a></li>
+                <li class="user-porfile"><a href="#">User Profile</a></li>
+                <li class="team"><a href="#">Team</a></li>
+            </ul>
+        </nav>
 
         <div class="text-box">
             <h1> Sustainable Land Use for a<br> Greener Future </h1>
