--- a/Lithila/sitemap.html
+++ b/Lithila/sitemap.html
@@ -22,15 +22,15 @@
 <body>   
     <nav class="navbar">
         <div class="logo">
-            <a href="#"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a>
+            <a href="../Induwara/home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
         </div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Feedback</a></li>
-            <li><a href="#">Sitemap</a></li>
-            <li><a href="#">User Profile</a></li>
-            <li><a href="#">Team</a></li>
+            <li class="#"><a href="../Induwara/home.html">Home</a></li>
+            <li class="#"><a href="../Lithila/gallery.html">Gallery</a></li>
+            <li class="#"><a href="../Induwara/feedback.html">Feedback</a></li>
+            <li class="active"><a href="../Lithila/sitemap.html">Sitemap</a></li>
+            <li class="#"><a href="#">User Profile</a></li>
+            <li class="#"><a href="#">Team</a></li>
         </ul>
     </nav>
 
