changed nav bar links

--- a/Uditha/team.html
+++ b/Uditha/team.html
@@ -21,19 +21,19 @@
 <body>
 
     <!-- Section 1 -->
-        <nav class="navbar">
-            <div class="logo">
-                <a href="#"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a>
-            </div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Feedback</a></li>
-                <li><a href="#">Sitemap</a></li>
-                <li><a href="#">User Profile</a></li>
-                <li class="active"><a href="#">Team</a></li>
-            </ul>
-        </nav>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="../Induwara/home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
+        </div>
+        <ul>
+            <li class="#"><a href="../Induwara/home.html">Home</a></li>
+            <li class="#"><a href="../Lithila/gallery.html">Gallery</a></li>
+            <li class="#"><a href="../Induwara/feedback.html">Feedback</a></li>
+            <li class="#"><a href="../Lithila/sitemap.html">Sitemap</a></li>
+            <li class="#"><a href="../Uditha/user_profile.html">User Profile</a></li>
+            <li class="active"><a href="../Uditha/team.html">Team</a></li>
+        </ul>
+    </nav>
 
     <div class="main">
     <center><h1>Meet Our Team</h1></center>
