--- a/Induwara/home.html
+++ b/Induwara/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&family=Vollkorn&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="template.css">
     <link rel="stylesheet" href="home.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,12 +29,12 @@
                 <a href="../Induwara/home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
             </div>
             <ul>
-                <li class="home"><a href="../Induwara/home.html">Home</a></li>
-                <li class="gallery"><a href="../Lithila/gallery.html">Gallery</a></li>
-                <li class="feedback"><a href="../Induwara/feedback.html">Feedback</a></li>
-                <li class="sitemap"><a href="../Lithila/sitemap.html">Sitemap</a></li>
-                <li class="user-porfile"><a href="#">User Profile</a></li>
-                <li class="team"><a href="#">Team</a></li>
+                <li class="active"><a href="../Induwara/home.html">Home</a></li>
+                <li class="#"><a href="../Lithila/gallery.html">Gallery</a></li>
+                <li class="#"><a href="../Induwara/feedback.html">Feedback</a></li>
+                <li class="#"><a href="../Lithila/sitemap.html">Sitemap</a></li>
+                <li class="#"><a href="../Uditha/user_profile.html">User Profile</a></li>
+                <li class="#"><a href="../Uditha/team.html">Team</a></li>
             </ul>
         </nav>
 
