--- a/Lithila/gallery.html
+++ b/Lithila/gallery.html
@@ -29,8 +29,8 @@
             <li class="active"><a href="../Lithila/gallery.html">Gallery</a></li>
             <li class="#"><a href="../Induwara/feedback.html">Feedback</a></li>
             <li class="#"><a href="../Lithila/sitemap.html">Sitemap</a></li>
-            <li class="#"><a href="#">User Profile</a></li>
-            <li class="#"><a href="#">Team</a></li>
+            <li class="#"><a href="../Uditha/user_profile.html">User Profile</a></li>
+            <li class="#"><a href="../Uditha/team.html">Team</a></li>
         </ul>
     </nav>
 
