--- a/Uditha/uditha.html
+++ b/Uditha/uditha.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&family=Vollkorn&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="navigation_footer.css">
+    <link rel="stylesheet" href="template.css">
     <link rel="stylesheet" href="uditha.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
     <!-- Section 1 -->
         <nav class="navbar">
             <div class="logo">
-                <a href="#"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a>
+                <a href="#"><img src="assests/logo1.jpg" alt="Wild Sphere Logo"></a>
             </div>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -35,7 +35,7 @@
             </ul>
         </nav>
     <div class="main">
-        <center><img src="images_folder/uditha.jpg" alt="Uditha Vithanage" width="170" class="image"></center>
+        <center><img src="assests/uditha.jpg" alt="Uditha Vithanage" width="170" class="image"></center>
         <h1>Page Editer</h1>
         <h2>Uditha Vithanage</h2>
         <h3>Student Role: 3</h3>
@@ -60,6 +60,6 @@
     <div class="footer">
         Template developed by <a href="#"> Induwara Arachchi </a>
     </div>
-    <script src="navigation_footer.js"></script>
+    <script src="template.js"></script>
 </body>
 </html>
