--- a/Lithila/gallery.html
+++ b/Lithila/gallery.html
@@ -134,7 +134,8 @@
         <img src="./assests/up-arrow.png">
     </div>
 
-    <script src="script.js"></script>
+    <script src="gallery.js"></script>
+    <script src="template.js"></script>
 
 </body>
 </html>
