--- a/Uditha/user_profile.html
+++ b/Uditha/user_profile.html
@@ -234,12 +234,12 @@
     </div>
 
     <div class="footer-dev" id="footer-dev">
-        Page developed by <a href="uditha.html"> Uditha Vithanage </a>
+        Page developed by <a href="../Uditha/editor.html"> Uditha Vithanage </a>
     </div>
 
     <!-- /* template developed by "Footer" */ -->
     <div class="footer">
-        Template developed by <a href="#"> Induwara Arachchi </a>
+        Template developed by <a href="../Induwara/editor.html"> Induwara Arachchi </a>
     </div>
 
     <script src="user_profile.js"></script>
