Linked all other pages

--- a/Induwara/editor.html
+++ b/Induwara/editor.html
@@ -24,15 +24,15 @@
     <!-- Section 1 -->
         <nav class="navbar">
             <div class="logo">
-                <a href="#"><img src="assests/logo1.jpg" alt="Wild Sphere Logo"></a>
+                <a href="./home.html"><img src="assests/logo1.jpg" alt="Wild Sphere Logo"></a>
             </div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Feedback</a></li>
-                <li><a href="#">Sitemap</a></li>
-                <li><a href="#">User Profile</a></li>
-                <li><a href="#">Team</a></li>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="../Lithila/gallery.html">Gallery</a></li>
+                <li><a href="./feedback.html">Feedback</a></li>
+                <li><a href="../Lithila/sitemap.html">Sitemap</a></li>
+                <li><a href="../Uditha/user_profile.html">User Profile</a></li>
+                <li><a href="../Uditha/team.html">Team</a></li>
             </ul>
         </nav>
     <div class="main">
@@ -54,13 +54,14 @@
     </div>
 
     <div class="footer-dev" id="footer-dev">
-        Page developed by <a href="../Induwara/editor.html"> Induwara Arachchi </a>
+        Page developed by <a href="./editor.html"> Induwara Arachchi </a>
     </div>
 
     <!-- /* template developed by "Footer" */ -->
     <div class="footer">
-        Template developed by <a href="../Induwara/editor.html"> Induwara Arachchi </a>
+        Template developed by <a href="./editor.html"> Induwara Arachchi </a>
     </div>
+
     <script src="template.js"></script>
 </body>
 </html>
