--- a/Induwara/home.html
+++ b/Induwara/home.html
@@ -26,12 +26,12 @@
     <section class="sec1">
         <nav class="navbar">
             <div class="logo">
-                <a href="../Induwara/home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
+                <a href="./home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
             </div>
             <ul>
-                <li class="active"><a href="../Induwara/home.html">Home</a></li>
+                <li class="active"><a href="./home.html">Home</a></li>
                 <li class="#"><a href="../Lithila/gallery.html">Gallery</a></li>
-                <li class="#"><a href="../Induwara/feedback.html">Feedback</a></li>
+                <li class="#"><a href="./feedback.html">Feedback</a></li>
                 <li class="#"><a href="../Lithila/sitemap.html">Sitemap</a></li>
                 <li class="#"><a href="../Uditha/user_profile.html">User Profile</a></li>
                 <li class="#"><a href="../Uditha/team.html">Team</a></li>
@@ -185,12 +185,12 @@
 
     <!-- /* page developed by "Footer" */ -->
     <div class="footer-dev" id="footer-dev">
-        Page developed by <a href="#"> Induwara Arachchi </a>
+        Page developed by <a href="./editor.html"> Induwara Arachchi </a>
     </div>
 
     <!-- /* template developed by "Footer" */ -->
     <div class="footer">
-        Template developed by <a href="#"> Induwara Arachchi </a>
+        Template developed by <a href="./editor.html"> Induwara Arachchi </a>
     </div>
 
     <!-- /* back-to-top button */ -->
@@ -199,5 +199,6 @@
     </div>
 
     <script src="home.js"></script>
+    <script src="template.js"></script>
 </body>
 </html>
