--- a/Lithila/content.html
+++ b/Lithila/content.html
@@ -26,15 +26,15 @@
     <section class="sec1">
         <nav class="navbar">
             <div class="logo">
-                <a href="#"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a>
+                <a href="../Induwara/home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
             </div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Feedback</a></li>
-                <li><a href="#">Sitemap</a></li>
-                <li><a href="#">User Profile</a></li>
-                <li><a href="#">Team</a></li>
+                <li><a href="../Induwara/home.html">Home</a></li>
+                <li><a href="./gallery.html">Gallery</a></li>
+                <li><a href="../Induwara/feedback.html">Feedback</a></li>
+                <li><a href="./sitemap.html">Sitemap</a></li>
+                <li><a href="../Uditha/user_profile.html">User Profile</a></li>
+                <li><a href="../Uditha/team.html">Team</a></li>
             </ul>
         </nav>
 
@@ -50,7 +50,7 @@
 
     <!-- /* page developed by "Footer" */ -->
     <div class="footer-dev" id="footer-dev">
-        Page developed by <a href="../Lithila/editor.html"> Lithila Mahagedara </a>
+        Page developed by <a href="./editor.html"> Lithila Mahagedara </a>
     </div>
 
     <!-- /* template developed by "Footer" */ -->
