--- a/Induwara/feedback.html
+++ b/Induwara/feedback.html
@@ -24,12 +24,12 @@
 
     <nav class="navbar">
         <div class="logo">
-            <a href="../Induwara/home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
+            <a href="./home.html"><img src="./assests/logo1.jpg" alt="Wild Sphere Logo"></a> <!--logo -->
         </div>
         <ul>
-            <li class="#"><a href="../Induwara/home.html">Home</a></li>
+            <li class="#"><a href="./home.html">Home</a></li>
             <li class="#"><a href="../Lithila/gallery.html">Gallery</a></li>
-            <li class="active"><a href="../Induwara/feedback.html">Feedback</a></li>
+            <li class="active"><a href="./feedback.html">Feedback</a></li>
             <li class="#"><a href="../Lithila/sitemap.html">Sitemap</a></li>
             <li class="#"><a href="../Uditha/user_profile.html">User Profile</a></li>
             <li class="#"><a href="../Uditha/team.html">Team</a></li>
@@ -95,13 +95,13 @@
 
     <!-- /* page developed by "Footer" */ -->
     <div class="footer-dev" id="footer-dev">
-        Page developed by <a href="#"> Induwara Arachchi </a>
+        Page developed by <a href="./editor.html"> Induwara Arachchi </a>
     </div>
 
 
     <!-- /* template developed by "Footer" */ -->
     <div class="footer">
-        Template developed by <a href="#"> Induwara Arachchi </a>
+        Template developed by <a href="./editor.html"> Induwara Arachchi </a>
     </div>
 
     <!-- /* back-to-top button */ -->
@@ -111,6 +111,7 @@
 
 
     <script src="feedback.js"></script>
+    <script src="template.js"></script>
 
 </body>
 </html>
