--- a/Lithila/sitemap.html
+++ b/Lithila/sitemap.html
@@ -26,9 +26,9 @@
         </div>
         <ul>
             <li class="#"><a href="../Induwara/home.html">Home</a></li>
-            <li class="#"><a href="../Lithila/gallery.html">Gallery</a></li>
+            <li class="#"><a href="./gallery.html">Gallery</a></li>
             <li class="#"><a href="../Induwara/feedback.html">Feedback</a></li>
-            <li class="active"><a href="../Lithila/sitemap.html">Sitemap</a></li>
+            <li class="active"><a href="./sitemap.html">Sitemap</a></li>
             <li class="#"><a href="../Uditha/user_profile.html">User Profile</a></li>
             <li class="#"><a href="../Uditha/team.html">Team</a></li>
         </ul>
@@ -148,12 +148,12 @@
     
      <!-- /* page developed by "Footer" */ -->
      <div class="footer-dev" id="footer-dev">
-        Page developed by <a href="#"> Lithila Mahagedara </a>
+        Page developed by <a href="./editor.html"> Lithila Mahagedara </a>
     </div>
 
     <!-- /* template developed by "Footer" */ -->
     <div class="footer">
-        Template developed by <a href="#"> Induwara Arachchi </a>
+        Template developed by <a href="../Induwara/editor.html"> Induwara Arachchi </a>
     </div>
 
     <!-- /* back-to-top button */ -->
