--- a/Uditha/team.html
+++ b/Uditha/team.html
@@ -31,8 +31,8 @@
             <li class="#"><a href="../Lithila/gallery.html">Gallery</a></li>
             <li class="#"><a href="../Induwara/feedback.html">Feedback</a></li>
             <li class="#"><a href="../Lithila/sitemap.html">Sitemap</a></li>
-            <li class="#"><a href="../Uditha/user_profile.html">User Profile</a></li>
-            <li class="active"><a href="../Uditha/team.html">Team</a></li>
+            <li class="#"><a href="./user_profile.html">User Profile</a></li>
+            <li class="active"><a href="./team.html">Team</a></li>
         </ul>
     </nav>
 
@@ -65,12 +65,12 @@
 
 
 <div class="footer-dev" id="footer-dev">
-    Page developed by <a href="uditha.html"> Uditha Vithanage </a>
+    Page developed by <a href="./editor.html"> Uditha Vithanage </a>
 </div>
 
 <!-- /* template developed by "Footer" */ -->
 <div class="footer">
-    Template developed by <a href="#"> Induwara Arachchi </a>
+    Template developed by <a href="../Induwara/editor.html"> Induwara Arachchi </a>
 </div>
 
 <script src="template.js"></script>
