--- a/Uditha/user_profile.html
+++ b/Uditha/user_profile.html
@@ -30,8 +30,8 @@
             <li class="#"><a href="../Lithila/gallery.html">Gallery</a></li>
             <li class="#"><a href="../Induwara/feedback.html">Feedback</a></li>
             <li class="#"><a href="../Lithila/sitemap.html">Sitemap</a></li>
-            <li class="active"><a href="../Uditha/user_profile.html">User Profile</a></li>
-            <li class="#"><a href="../Uditha/team.html">Team</a></li>
+            <li class="active"><a href="./user_profile.html">User Profile</a></li>
+            <li class="#"><a href="./team.html">Team</a></li>
         </ul>
     </nav>
 
@@ -234,7 +234,7 @@
     </div>
 
     <div class="footer-dev" id="footer-dev">
-        Page developed by <a href="../Uditha/editor.html"> Uditha Vithanage </a>
+        Page developed by <a href="./editor.html"> Uditha Vithanage </a>
     </div>
 
     <!-- /* template developed by "Footer" */ -->
