updated page links

--- a/Lithila/sitemap.html
+++ b/Lithila/sitemap.html
@@ -48,73 +48,73 @@
                     </rect>
                     <text x="415" y="38" class="node-text">Splash Screen</text>
                 </a>
-                <a href="home.html" class="node-link">
+                <a href="../Induwara/home.html" class="node-link">
                     <rect id="home" x="370" y="100" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Home</title>
                     </rect>
                     <text x="415" y="115" class="node-text">Home</text>
                 </a>
-                <a href="gallery.html" class="node-link">
+                <a href="./gallery.html" class="node-link">
                     <rect id="gallery" x="150" y="200" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Gallery</title>
                     </rect>
                     <text x="195" y="215" class="node-text">Gallery</text>
                 </a>
-                <a href="feedback.html" class="node-link">
+                <a href="../Induwara/feedback.html" class="node-link">
                     <rect id="feedback" x="260" y="200" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Feedback</title>
                     </rect>
                     <text x="305" y="215" class="node-text">Feedback</text>
                 </a>
-                <a href="sitemap.html" class="node-link">
+                <a href="./sitemap.html" class="node-link">
                     <rect id="sitemap-node" x="370" y="200" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Sitemap</title>
                     </rect>
                     <text x="415" y="215" class="node-text">Sitemap</text>
                 </a>
-                <a href="user_profile.html" class="node-link">
+                <a href="../Uditha/user_profile.html" class="node-link">
                     <rect id="user-profile" x="480" y="200" width="90" height="30" rx="10" ry="10" class="node">
                         <title>User Profile</title>
                     </rect>
                     <text x= "525" y="215" class="node-text">User Profile</text>
                 </a>
-                <a href="team.html" class="node-link">
+                <a href="../Uditha/team.html" class="node-link">
                     <rect id="team" x="590" y="200" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Team</title>
                     </rect>
                     <text x="635" y="215" class="node-text">Team</text>
                 </a>
-                <a href="student_2.html" class="node-link">
+                <a href="../Induwara/editor.html" class="node-link">
                     <rect id="student-2" x="530" y="300" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Student 02</title>
                     </rect>
                     <text x="575" y="315" class="node-text">Student 02</text>
                 </a>
-                <a href="student_3.html" class="node-link">
+                <a href="../Uditha/editor.html" class="node-link">
                     <rect id="student-3" x="530" y="360" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Student 03</title>
                     </rect>
                     <text x="575" y="375" class="node-text">Student 03</text>
                 </a>
-                <a href="gallery.html" class="node-link">
+                <a href="./editor.html" class="node-link">
                     <rect id="student-4" x="530" y="420" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Student 04</title>
                     </rect>
                     <text x="575" y="435" class="node-text">Student 04</text>
                 </a>
-                <a href="content_page_2.html" class="node-link">
+                <a href="../Induwara/content.html" class="node-link">
                     <rect id="content-page-2" x="390" y="300" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Content Page - Student 02</title>
                     </rect>
                     <text x="435" y="315" class="node-text">Content Page</text>
                 </a>
-                <a href="content_page_3.html" class="node-link">
+                <a href="../Uditha/content.html" class="node-link">
                     <rect id="content-page-3" x="390" y="360" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Content Page - Student 03</title>
                     </rect>
                     <text x="435" y="375" class="node-text">Content Page</text>
                 </a>
-                <a href="content_page_4.html" class="node-link">
+                <a href="../Lithila/content.html" class="node-link">
                     <rect id="content-page-4" x="390" y="420" width="90" height="30" rx="10" ry="10" class="node">
                         <title>Content Page - Student 04</title>
                     </rect>
