--- a/Uditha/team.html
+++ b/Uditha/team.html
@@ -39,25 +39,26 @@
     <div class="main">
     <center><h1>Meet Our Team</h1></center>
     <div class="main2">
-        <div class="sub">
+        <a href="../Induwara/editor.html"><div class="sub">
             <center>
                 <img src="assests\induwara.jpg" width="70%" alt="Induwara" class="images">
                 <h3>Induwara Arachchi</h3>
-                <div class="content"><p>Student Role - 2<br>Designed slides: Home Screen & Feedback Form</p></div>
+                <div class="content"><p>Student Role - 2<br>Designed slides: Home Screen & Feedback Form</p></div></a>
             </center>
         </div>
-        <a href="uditha.html"><div class="sub">
+        <a href="./editor.html"><div class="sub">
             <center>
                 <img src="assests\uditha.jpg" width="70%" alt="Uditha" class="images">
                 <h3>Uditha Vithanage</h3>
                 <div class="content"><p>Student Role - 3<br>Designed slides: User Profile & Team page</p></div></a>
             </center>
         </div>
-        <div class="sub">
+
+        <a href="../Lithila/editor.html"><div class="sub">
             <center>
                 <img src="assests\lithila.jpg" width="70%" alt="Lithila" class="images">
                 <h3>Lithila Mahagedara</h3>
-                <div class="content"><p>Student Role - 4<br>Designed slides: Gallery & Site Map</p></div>
+                <div class="content"><p>Student Role - 4<br>Designed slides: Gallery & Site Map</p></div></a>
             </center>
         </div>
     </div>
