--- a/Uditha/user_profile.html
+++ b/Uditha/user_profile.html
@@ -44,8 +44,8 @@
         <div class="subslide">
             <div style="display: flex;">
                     <ul>
-                        <img src="assests/tick.png" width="40"><li class="steps" id="s1">Step 1</li>⮞ .
-                        <li class="steps">Step 2</li>⮞ .
+                        <img src="assests/tick.png" width="40"><li class="steps" id="s1">Step 1</li>⮞ 
+                        <li class="steps">Step 2</li>⮞ 
                         <li class="steps">Step 3 </li>
                     </ul>   
             </div>
@@ -159,8 +159,8 @@
         <div class="subslide">
             <div style="display: flex;">
                     <ul>
-                        <li class="steps">Step 1</li>⮞ .
-                        <li class="steps">Step 2</li>⮞ .
+                        <li class="steps">Step 1</li>⮞
+                        <li class="steps">Step 2</li>⮞
                         <img src="assests/tick.png" width="40"><li class="steps" id="s3">Step 3</li>
                     </ul>   
             </div>
