added a light colored back to top button

--- a/Induwara/feedback.html
+++ b/Induwara/feedback.html
@@ -106,7 +106,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow.png">
+        <img src="./assests/up-arrow-light.png">
     </div>
 
 
