--- a/Lithila/gallery.html
+++ b/Lithila/gallery.html
@@ -131,7 +131,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow.png">
+        <img src="./assests/up-arrow-light.png">
     </div>
 
     <script src="gallery.js"></script>
