Changed sitemap line colours

--- a/Lithila/sitemap.html
+++ b/Lithila/sitemap.html
@@ -122,24 +122,24 @@
                 </a>
 
                 <!-- Define connecting lines -->
-                <line x1="415" y1="50" x2="415" y2="100" stroke="black" stroke-width="2"/> <!-- Vertical line from Splash Screen to Home -->
-                <line x1="415" y1="150" x2="415" y2="200" stroke="black" stroke-width="2"/> <!-- Vertical line from Home to Feedback row -->
-                <line x1="415" y1="150" x2="195" y2="150" stroke="black" stroke-width="2"/> <!-- Horizontal line from Home to Gallery row -->
-                <line x1="195" y1="150" x2="195" y2="200" stroke="black" stroke-width="2"/> <!-- Vertical line from Gallery row to Gallery -->
-                <line x1="415" y1="150" x2="305" y2="150" stroke="black" stroke-width="2"/> <!-- Horizontal line from Home to Feedback row -->
-                <line x1="305" y1="150" x2="305" y2="200" stroke="black" stroke-width="2"/> <!-- Vertical line from Feedback row to Feedback -->
-                <line x1="415" y1="130" x2="415" y2="200" stroke="black" stroke-width="2"/> <!-- Vertical line from Home to Sitemap -->
-                <line x1="415" y1="150" x2="525" y2="150" stroke="black" stroke-width="2"/> <!-- Horizontal line from Home to User Profile row -->
-                <line x1="525" y1="150" x2="525" y2="200" stroke="black" stroke-width="2"/> <!-- Vertical line from User Profile row to User Profile -->
-                <line x1="415" y1="150" x2="635" y2="150" stroke="black" stroke-width="2"/> <!-- Horizontal line from Home to Team row -->
-                <line x1="635" y1="150" x2="635" y2="200" stroke="black" stroke-width="2"/> <!-- Vertical line from Team row to Team -->
-                <line x1="650" y1="230" x2="650" y2="435" stroke="black" stroke-width="2"/> <!-- Vertical line from Team to Students -->
-                <line x1="530" y1="315" x2="480" y2="315" stroke="black" stroke-width="2"/> <!-- Horizontal line from Student 02 to Content Page -->
-                <line x1="622" y1="315" x2="650" y2="315" stroke="black" stroke-width="2"/> <!-- Horizontal line from Student 02 to Content Page -->
-                <line x1="530" y1="375" x2="480" y2="375" stroke="black" stroke-width="2"/> <!-- Horizontal line from Student 03 to Content Page -->
-                <line x1="622" y1="375" x2="650" y2="375" stroke="black" stroke-width="2"/> <!-- Horizontal line from Student 03 to Team line -->
-                <line x1="530" y1="435" x2="480" y2="435" stroke="black" stroke-width="2"/> <!-- Horizontal line from Student 04 to Content Page -->
-                <line x1="622" y1="435" x2="650" y2="435" stroke="black" stroke-width="2"/> <!-- Horizontal line from Student 04 to Team line -->
+                <line x1="415" y1="50" x2="415" y2="100"/> <!-- Vertical line from Splash Screen to Home -->
+                <line x1="415" y1="150" x2="415" y2="200"/> <!-- Vertical line from Home to Feedback row -->
+                <line x1="415" y1="150" x2="195" y2="150"/> <!-- Horizontal line from Home to Gallery row -->
+                <line x1="195" y1="150" x2="195" y2="200"/> <!-- Vertical line from Gallery row to Gallery -->
+                <line x1="415" y1="150" x2="305" y2="150"/> <!-- Horizontal line from Home to Feedback row -->
+                <line x1="305" y1="150" x2="305" y2="200"/> <!-- Vertical line from Feedback row to Feedback -->
+                <line x1="415" y1="130" x2="415" y2="200"/> <!-- Vertical line from Home to Sitemap -->
+                <line x1="415" y1="150" x2="525" y2="150"/> <!-- Horizontal line from Home to User Profile row -->
+                <line x1="525" y1="150" x2="525" y2="200"/> <!-- Vertical line from User Profile row to User Profile -->
+                <line x1="415" y1="150" x2="635" y2="150"/> <!-- Horizontal line from Home to Team row -->
+                <line x1="635" y1="150" x2="635" y2="200"/> <!-- Vertical line from Team row to Team -->
+                <line x1="650" y1="230" x2="650" y2="435"/> <!-- Vertical line from Team to Students -->
+                <line x1="530" y1="315" x2="480" y2="315"/> <!-- Horizontal line from Student 02 to Content Page -->
+                <line x1="622" y1="315" x2="650" y2="315"/> <!-- Horizontal line from Student 02 to Content Page -->
+                <line x1="530" y1="375" x2="480" y2="375"/> <!-- Horizontal line from Student 03 to Content Page -->
+                <line x1="622" y1="375" x2="650" y2="375"/> <!-- Horizontal line from Student 03 to Team line -->
+                <line x1="530" y1="435" x2="480" y2="435"/> <!-- Horizontal line from Student 04 to Content Page -->
+                <line x1="622" y1="435" x2="650" y2="435"/> <!-- Horizontal line from Student 04 to Team line -->
             </svg>
         </div>
     </div>
