--- a/Induwara/content.html
+++ b/Induwara/content.html
@@ -146,7 +146,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow.png">
+        <img src="./assests/up-arrow-light.png">
     </div>
 
     <script src="template.js"></script>
