--- a/Lithila/sitemap.html
+++ b/Lithila/sitemap.html
@@ -158,7 +158,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow.png">
+        <img src="./assests/up-arrow-light.png">
     </div>
 
     <script src="sitemap.js"></script>
