--- a/Induwara/home.html
+++ b/Induwara/home.html
@@ -48,7 +48,7 @@
     <!-- Section 2 -->
     <section class="sec2">
         <div class="vm-head">
-            <h1> Who Are We </h1>
+            <h1> Who We Are? </h1>
             <p> Our Commitment to a Brighter Future </p>
         </div>
         <div class="vm-card-container">
