Updated the content page - student 04
Added new background pictures

--- a/Lithila/editor.html
+++ b/Lithila/editor.html
@@ -38,17 +38,17 @@
 
 
     <div class="main">
-        <center><img src="assests/uditha.jpg" alt="Uditha Vithanage" width="170" class="image"></center>
+        <center><img src="assests/lithila.jpg" alt="Lithila Mahagedara" width="170" class="image"></center>
         <h1>Page Editer</h1>
-        <h2>Uditha Vithanage</h2>
-        <h3>Student Role: 3</h3>
+        <h2>Lithila Mahagedara</h2>
+        <h3>Student Role: 4</h3>
         <p>I Designed and Implimented following pages...</p><hr><hr>
-        <p class="titles">1) USER PROFILE PAGE</p>
-        <p>I created this user profile page using HTML, CSS and JavaScript.</p>
-        <a href="user_profile.html"><u>Visit User Profile Page</u></a>
-        <p class="titles">2) TEAM MEMBERS PAGE</p>
-        <p>I created this Team members page using HTML and CSS.</p>
-        <a href="team.html"><u>Visit Team Members Page</u></a>
+        <p class="titles">1) Gallery PAGE</p>
+        <p>I created this gallery page using HTML, CSS and JavaScript.</p>
+        <a href="gallery.html"><u>Visit gallery Page</u></a>
+        <p class="titles">2) Sitemap Page</p>
+        <p>I created this Sitemap page using HTML and CSS.</p>
+        <a href="sitemap.html"><u>Visit Sitemap Page</u></a>
         <p class="titles">3) CONTENT PAGE</p>
         <p>I created an additional content page using HTML and CSS.</p>
         <a href="#"><u>Visit Content Page</u></a>
