--- a/Uditha/user_profile.html
+++ b/Uditha/user_profile.html
@@ -211,7 +211,7 @@
     <!-- summary slide -->
     <div class="slide">
         <div class="subslide">
-            <center><h1 style="font-family: Poppins, sans-serif;">Summary</h1></center>
+            <center><h1 style="font-family: Poppins, sans-serif; color: #304D30;">Summary</h1></center>
             <h3 style="margin-left: 3%;">Please review the entered information for accuracy. You may go back to make any necessary edits.</h3>
             <p id="summarypara" style="margin-left: 5%; font-size: 15px; line-height: 30px; font-family: Poppins, sans-serif;"></p>
             <button class="EOC" onclick="changeSlide(-1)">Go back and Edit</button>
