--- a/Lithila/gallery.html
+++ b/Lithila/gallery.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&family=Vollkorn&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="gallery.css">
-    <link rel="stylesheet" href="template.css">
+    <link rel="stylesheet" href="styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -135,7 +136,7 @@
     </div>
 
     <script src="gallery.js"></script>
-    <script src="template.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
