--- a/Lithila/sitemap.html
+++ b/Lithila/sitemap.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&family=Vollkorn&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="template.css">
+
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="sitemap.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -162,7 +163,7 @@
     </div>
 
     <script src="sitemap.js"></script>
-    <script src="template.js"></script>
+    <script src="script.js"></script>
 
     </body>
 </html>
