--- a/Uditha/content.html
+++ b/Uditha/content.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&family=Vollkorn&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="template.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="content.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -133,6 +133,6 @@
         <img src="./assests/up-arrow.png">
     </div>
 
-    <script src="template.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
