--- a/Uditha/user_profile.html
+++ b/Uditha/user_profile.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans&family=Vollkorn&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="template.css">
+
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="user_profile.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -243,6 +244,6 @@
     </div>
 
     <script src="user_profile.js"></script>
-    <script src="template.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
