updated the slogan

--- a/Induwara/home.html
+++ b/Induwara/home.html
@@ -39,7 +39,7 @@
         </nav>
 
         <div class="text-box">
-            <h1> Sustainable Land Use for a<br> Greener Future </h1>
+            <h1> Discover, Protect, Celebrate <br> Wildlife and Nature </h1>
             <a href="../Uditha/user_profile.html" class="hero-btn"> Join us now </a> 
         </div>
     </section>
