--- a/Uditha/editor.html
+++ b/Uditha/editor.html
@@ -51,7 +51,7 @@
         <a href="team.html"><u>Visit Team Members Page</u></a>
         <p class="titles">3) CONTENT PAGE</p>
         <p>I created an additional content page using HTML and CSS.</p>
-        <a href="#"><u>Visit Content Page</u></a>
+        <a href="./content.html"><u>Visit Content Page</u></a>
 
     </div>
 
