Add percentage label for user profile steps

--- a/Uditha/user_profile.html
+++ b/Uditha/user_profile.html
@@ -58,7 +58,7 @@
                     <div class="progress-container"><div id="progress-bar4"></div></div>
                     <div class="progress-container"><div id="progress-bar5"></div></div>
                 </div>
-                <p id = "stepintext">0 of 5</p>
+                <p id = "stepintext">0 of 5 (0%)</p>
                 <form class="account-form" id ="step1form">
                     <h1>Create an account</h1>
 
@@ -118,7 +118,7 @@
                 <div class="progress-container"><div id="progress-bar8"></div></div>
                 <div class="progress-container"><div id="progress-bar9"></div></div>
             </div>
-            <p id = "stepintext2">0 of 4</p>
+            <p id = "stepintext2">0 of 4 (0%)</p>
             <div class="slider2">
                 <div class="slides2">
                     <div class="slide2">
@@ -171,7 +171,7 @@
                 <div class="progress-container"><div id="progress-bar12"></div></div>
                 <div class="progress-container"><div id="progress-bar13"></div></div>
             </div>
-            <p id = "stepintext3">0 of 4</p>
+            <p id = "stepintext3">0 of 4 (0%)</p>
             <div class="slider3">
                 <div class="slides3">
 
