changed heading font in sitemap.

--- a/Uditha/team.html
+++ b/Uditha/team.html
@@ -45,14 +45,14 @@
             <center>
                 <img src="assests\induwara.jpg" width="70%" alt="Induwara" class="images">
                 <h3>Induwara Arachchi</h3>
-                <div class="content"><p>Student Role - 2<br>Designed slides: Home Screen & Feedback Form</p></div></a>
+                <div class="content"><p>Student Role - 2<br>Designed pages: Home Screen & Feedback Form</p></div></a>
             </center>
         </div>
         <a href="./editor.html"><div class="sub">
             <center>
                 <img src="assests\uditha.jpg" width="70%" alt="Uditha" class="images">
                 <h3>Uditha Vithanage</h3>
-                <div class="content"><p>Student Role - 3<br>Designed slides: User Profile & Team page</p></div></a>
+                <div class="content"><p>Student Role - 3<br>Designed pages: User Profile & Team page</p></div></a>
             </center>
         </div>
 
@@ -60,7 +60,7 @@
             <center>
                 <img src="assests\lithila.jpg" width="70%" alt="Lithila" class="images">
                 <h3>Lithila Mahagedara</h3>
-                <div class="content"><p>Student Role - 4<br>Designed slides: Gallery & Site Map</p></div></a>
+                <div class="content"><p>Student Role - 4<br>Designed pages: Gallery & Site Map</p></div></a>
             </center>
         </div>
     </div>
