--- a/Lithila/editor.html
+++ b/Lithila/editor.html
@@ -51,7 +51,7 @@
         <a href="sitemap.html"><u>Visit Sitemap Page</u></a>
         <p class="titles">3) CONTENT PAGE</p>
         <p>I created an additional content page using HTML and CSS.</p>
-        <a href="#"><u>Visit Content Page</u></a>
+        <a href="content.html"><u>Visit Content Page</u></a>
 
     </div>
 
