Add alt for content page images

--- a/Uditha/content.html
+++ b/Uditha/content.html
@@ -49,7 +49,7 @@
     <div class="intro">
         <h2  id="content-1">Wildlife Conservation</h2>
 
-        <img class="img-1" src="assests/content_image_1.webp">
+        <img class="img-1" src="assests/content_image_1.webp" alt="Wildlife Conservation">
 
         <p> 
             Wildlife conservation involves the protection and management of wild species and their habitats. This section begins with a detailed explanation of the definition and scope of wildlife conservation. It explores the major threats to wildlife, including habitat loss, poaching and illegal trade, climate change, and pollution.
@@ -69,7 +69,7 @@
     <div class="intro">
         <h2  id="content-2"> Endangered Species Conservation </h2>
 
-        <img class="img-2" src="assests/content_image_2.avif">
+        <img class="img-2" src="assests/content_image_2.avif" alt="Endangered Species Conservation">
 
         <p> 
             Marine wildlife conservation addresses the protection of species living in oceans and other marine environments. This section starts with an overview of the importance of marine ecosystems and the unique challenges faced by marine wildlife. It examines threats such as overfishing, habitat destruction, pollution, and climate change, which have significant impacts on marine species.
@@ -89,7 +89,7 @@
     <div class="intro">
         <h2  id="content-3"> Marine Wildlife Conservation </h2>
 
-        <img class="img-3" src="assests/content_image_3.webp">
+        <img class="img-3" src="assests/content_image_3.webp" alt="Marine Wildlife Conservation">
 
         <p> 
             Marine wildlife conservation addresses the protection of species living in oceans and other marine environments. This section starts with an overview of the importance of marine ecosystems and the unique challenges faced by marine wildlife. It examines threats such as overfishing, habitat destruction, pollution, and climate change, which have significant impacts on marine species.
@@ -121,7 +121,7 @@
 
     <!-- /* back-to-top button */ -->
     <div class="back-to-top" id="back-to-top">
-        <img src="./assests/up-arrow.png">
+        <img src="./assests/up-arrow.png" alt="back-to-top-button">
     </div>
 
     <script src="script.js"></script>
