Remove center tags in team page

--- a/Uditha/team.html
+++ b/Uditha/team.html
@@ -37,34 +37,32 @@
         </ul>
     </nav>
 
-    <center><h1>Meet Our Team</h1></center>
+    <h1>Meet Our Team</h1>
     <div class="main">
     
-    <div class="main2">
-        <a href="../Induwara/editor.html"><div class="sub">
-            <center>
-                <img src="assests\induwara.jpg" width="70%" alt="Induwara" class="images">
-                <h3>Induwara Arachchi</h3>
-                <div class="content"><p>Student Role - 2<br>Designed pages: Home Screen & Feedback Form</p></div></a>
-            </center>
-        </div>
-        <a href="./editor.html"><div class="sub">
-            <center>
-                <img src="assests\uditha.jpg" width="70%" alt="Uditha" class="images">
-                <h3>Uditha Vithanage</h3>
-                <div class="content"><p>Student Role - 3<br>Designed pages: User Profile & Team page</p></div></a>
-            </center>
-        </div>
+        <div class="main2">
+            <a href="../Induwara/editor.html">
+                <div class="sub">
+                    <img src="assests\induwara.jpg" width="70%" alt="Induwara" class="images">
+                    <h3>Induwara Arachchi</h3>
+                    <div class="content"><p>Student Role - 2<br>Designed pages: Home Screen & Feedback Form</p></div></a>
+                </div>
+            <a href="./editor.html">
+                <div class="sub">
+                    <img src="assests\uditha.jpg" width="70%" alt="Uditha" class="images">
+                    <h3>Uditha Vithanage</h3>
+                    <div class="content"><p>Student Role - 3<br>Designed pages: User Profile & Team page</p></div></a>
+            </div>
 
-        <a href="../Lithila/editor.html"><div class="sub">
-            <center>
-                <img src="assests\lithila.jpg" width="70%" alt="Lithila" class="images">
-                <h3>Lithila Mahagedara</h3>
-                <div class="content"><p>Student Role - 4<br>Designed pages: Gallery & Site Map</p></div></a>
-            </center>
+            <a href="../Lithila/editor.html">
+                <div class="sub">
+                    <img src="assests\lithila.jpg" width="70%" alt="Lithila" class="images">
+                    <h3>Lithila Mahagedara</h3>
+                    <div class="content"><p>Student Role - 4<br>Designed pages: Gallery & Site Map</p></div></a>
+            </div>
         </div>
     </div>
-</div>
+    
 
 
 <div class="footer-dev" id="footer-dev">
