--- a/Uditha/editor.html
+++ b/Uditha/editor.html
@@ -38,7 +38,7 @@
 
 
     <div class="main">
-        <center><img src="assests/uditha.jpg" alt="Uditha Vithanage" width="170" class="image"></center>
+        <img src="assests/uditha.jpg" alt="Uditha Vithanage" width="170" class="image">
         <h1>Page Editer</h1>
         <h2>Uditha Vithanage</h2>
         <h3>Student Role: 3</h3>
