--- a/Uditha/team.html
+++ b/Uditha/team.html
@@ -43,20 +43,20 @@
         <div class="main2">
             <a href="../Induwara/editor.html">
                 <div class="sub">
-                    <img src="assests\induwara.jpg" width="70%" alt="Induwara" class="images">
+                    <img src="assests/induwara.jpg" width="70%" alt="Induwara" class="images">
                     <h3>Induwara Arachchi</h3>
                     <div class="content"><p>Student Role - 2<br>Designed pages: Home Screen & Feedback Form</p></div></a>
                 </div>
             <a href="./editor.html">
                 <div class="sub">
-                    <img src="assests\uditha.jpg" width="70%" alt="Uditha" class="images">
+                    <img src="assests/uditha.jpg" width="70%" alt="Uditha" class="images">
                     <h3>Uditha Vithanage</h3>
                     <div class="content"><p>Student Role - 3<br>Designed pages: User Profile & Team page</p></div></a>
             </div>
 
             <a href="../Lithila/editor.html">
                 <div class="sub">
-                    <img src="assests\lithila.jpg" width="70%" alt="Lithila" class="images">
+                    <img src="assests/lithila.jpg" width="70%" alt="Lithila" class="images">
                     <h3>Lithila Mahagedara</h3>
                     <div class="content"><p>Student Role - 4<br>Designed pages: Gallery & Site Map</p></div></a>
             </div>
