--- a/Uditha/team.html
+++ b/Uditha/team.html
@@ -41,25 +41,23 @@
     <div class="main">
     
         <div class="main2">
-            <a href="../Induwara/editor.html">
-                <div class="sub">
-                    <img src="assests/induwara.jpg" width="70%" alt="Induwara" class="images">
+                <a href="../Induwara/editor.html" class="anchor"><div class="sub">
+                    <img src="assests/induwara.jpg" width="225" alt="Induwara" class="images">
                     <h3>Induwara Arachchi</h3>
-                    <div class="content"><p>Student Role - 2<br>Designed pages: Home Screen & Feedback Form</p></div></a>
-                </div>
-            <a href="./editor.html">
-                <div class="sub">
-                    <img src="assests/uditha.jpg" width="70%" alt="Uditha" class="images">
-                    <h3>Uditha Vithanage</h3>
-                    <div class="content"><p>Student Role - 3<br>Designed pages: User Profile & Team page</p></div></a>
-            </div>
+                    <div class="content"><p>Student Role - 2<br>Designed pages: Home Screen & Feedback Form</p></div>
+                </div></a>
 
-            <a href="../Lithila/editor.html">
-                <div class="sub">
-                    <img src="assests/lithila.jpg" width="70%" alt="Lithila" class="images">
+                <a href="./editor.html" class="anchor"><div class="sub"></div><div class="sub">
+                    <img src="assests/uditha.jpg" width="225" alt="Uditha" class="images">
+                    <h3>Uditha Vithanage</h3>
+                    <div class="content"><p>Student Role - 3<br>Designed pages: User Profile & Team page</p></div>
+                </div></a>
+
+                <a href="../Lithila/editor.html" class="anchor"><div class="sub"></div><div class="sub">
+                    <img src="assests/lithila.jpg" width="225" alt="Lithila" class="images">
                     <h3>Lithila Mahagedara</h3>
-                    <div class="content"><p>Student Role - 4<br>Designed pages: Gallery & Site Map</p></div></a>
-            </div>
+                    <div class="content"><p>Student Role - 4<br>Designed pages: Gallery & Site Map</p></div>
+                </div></a>
         </div>
     </div>
     
