Add alt for tick image & remove center tags

--- a/Uditha/user_profile.html
+++ b/Uditha/user_profile.html
@@ -45,7 +45,7 @@
         <div class="subslide">
             <div style="display: flex;">
                     <ul>
-                        <img src="assests/tick.png" width="40"><li class="steps" id="s1">Step 1</li>⮞ 
+                        <img src="assests/tick.png" width="40" alt="tick"><li class="steps" id="s1">Step 1</li>⮞ 
                         <li class="steps">Step 2</li>⮞ 
                         <li class="steps">Step 3 </li>
                     </ul>   
@@ -108,7 +108,7 @@
             <div style="display: flex;">
                     <ul>
                         <li class="steps">Step 1</li>⮞ .
-                        <img src="assests/tick.png" width="40"><li class="steps" id="s2">Step 2</li>⮞ .
+                        <img src="assests/tick.png" width="40" alt="tick"><li class="steps" id="s2">Step 2</li>⮞ .
                         <li class="steps">Step 3 </li>
                     </ul>   
             </div>
@@ -162,7 +162,7 @@
                     <ul>
                         <li class="steps">Step 1</li>⮞
                         <li class="steps">Step 2</li>⮞
-                        <img src="assests/tick.png" width="40"><li class="steps" id="s3">Step 3</li>
+                        <img src="assests/tick.png" width="40" alt="tick"><li class="steps" id="s3">Step 3</li>
                     </ul>   
             </div>
             <div class="progress_bars">
@@ -212,7 +212,7 @@
     <!-- summary slide -->
     <div class="slide">
         <div class="subslide">
-            <center><h1 style="font-family: Poppins, sans-serif; color: #304D30;">Summary</h1></center>
+            <h1 style="font-family: Poppins, sans-serif; color: #304D30; text-align: center;">Summary</h1>
             <h3 style="margin-left: 3%;">Please review the entered information for accuracy. You may go back to make any necessary edits.</h3>
             <p id="summarypara" style="margin-left: 5%; font-size: 15px; line-height: 30px; font-family: Poppins, sans-serif;"></p>
             <button class="EOC" onclick="changeSlide(-1)">Go back and Edit</button>
