--- a/Uditha/user_profile.html
+++ b/Uditha/user_profile.html
@@ -45,7 +45,7 @@
         <div class="subslide">
             <div style="display: flex;">
                     <ul>
-                        <img src="assests/tick.png" width="40" alt="tick"><li class="steps" id="s1"><span>Step 1</span>  ⮞</li> 
+                        <li class="steps" id="s1"><img src="assests/tick.png" width="40" alt="tick" class="tick"><span>Step 1</span>  ⮞</li> 
                         <li class="steps">Step 2 ⮞</li> 
                         <li class="steps">Step 3 </li>
                     </ul>   
@@ -108,7 +108,7 @@
             <div style="display: flex;">
                     <ul>
                         <li class="steps">Step 1 ⮞</li>
-                        <img src="assests/tick.png" width="40" alt="tick"><li class="steps" id="s2"><span>Step 2</span> ⮞</li>
+                        <li class="steps" id="s2"><img src="assests/tick.png" width="40" alt="tick" class="tick"><span>Step 2</span> ⮞</li>
                         <li class="steps">Step 3 </li>
                     </ul>   
             </div>
@@ -162,7 +162,7 @@
                     <ul>
                         <li class="steps">Step 1 ⮞</li>
                         <li class="steps">Step 2 ⮞</li>
-                        <img src="assests/tick.png" width="40" alt="tick"><li class="steps" id="s3"><span>Step 3</span></li>
+                        <li class="steps" id="s3"><img src="assests/tick.png" width="40" alt="tick" class="tick"><span>Step 3</span></li>
                     </ul>   
             </div>
             <div class="progress_bars">
